# mdse

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/md-search-engine/: design.md  requirements.md  tasks.md
app/: __init__.py  api.py  config.py  db.py  indexer.py  main.py  middleware.py  models.py  search_service.py  security.py  watcher.py
app/static/: script.js  style.css
app/templates/: base.html  doc.html  search.html
deployment/: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  md-search.service  nginx.conf
docs/: SECURITY.md  another.md  test.md
docs/features/: HIGHLIGHT_EXAMPLES.md  HIGHLIGHT_FEATURE.md  SMART_HIGHLIGHT.md
scripts/: backup.sh  health_check.sh  init_db.py
tests/: test_api.py  test_chinese_search.py  test_config.py  test_db_init.py  test_highlight.py  test_indexer.py  test_properties_config.py  test_properties_indexer.py  test_properties_logging.py  test_properties_search.py  test_properties_watcher.py  test_search_service.py  test_security.py  test_smart_highlight.py
