[project]
name = "md-search-engine"
version = "0.1.0"
description = "基于 FastAPI 和 SQLite FTS5 的 Markdown 全文搜索引擎"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
